Simplify process of propagating values to Trino config files